--- a/package.json
+++ b/package.json
@@ -1,33 +1,53 @@
 {
-  "name": "faucet-evm-template",
-  "version": "0.1.0",
-  "private": true,
+  "name": "faucet-lab",
+  "version": "2.0.0",
+  "description": "Faucet Lab",
+  "main": "next.config.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "test": "zona"
   },
   "dependencies": {
-    "@hcaptcha/react-hcaptcha": "^1.4.4",
-    "@next/font": "13.1.1",
-    "@tailwindcss/forms": "^0.5.3",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.31.0",
-    "eslint-config-next": "13.1.1",
-    "ethers": "^5.7.2",
-    "hcaptcha": "^0.1.1",
-    "ioredis": "^5.2.4",
-    "next": "13.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@types/react-icons": "^3.0.0",
+    "@types/react-slick": "^0.23.10",
+    "@web3-react/core": "6.1.9",
+    "@web3-react/injected-connector": "6.0.7",
+    "@web3-react/walletconnect-connector": "6.2.13",
+    "ethers": "^5.7.1",
+    "framer-motion": "4.1.17",
+    "moment": "^2.29.3",
+    "next": "12.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.8.0",
+    "react-slick": "^0.28.1",
+    "react-spinners": "^0.11.0",
+    "react-toastify": "^8.2.0",
+    "sass": "^1.49.8",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/node": "17.0.18",
+    "@types/react": "17.0.39",
     "autoprefixer": "^10.4.13",
+    "eslint": "8.9.0",
+    "eslint-config-next": "12.1.0",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
-  }
+    "tailwindcss": "^3.2.7",
+    "typescript": "4.5.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zoonai/faucet-labs"
+  },
+  "keywords": [
+    "faucet-labs"
+  ],
+  "author": "GG Team",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/zoonai/faucet-labs/issues"
+  },
+  "homepage": "https://github.com/zoonai/faucet-labs#readme"
 }
